--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "author": "Matt Fischer",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^0.1.5",
     "apollo-boost": "^0.1.4",
+    "file-loader": "^1.1.11",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.1.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1",
+    "url-loader": "^1.0.1"
   }
 }
